// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedJobItem should render with many props assigned 1`] = `
<article
  className="job"
>
  <a
    href="https://jobs.lever.co/formidable/82919058-b73c-4a02-8589-87e2433f0a90"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    <h6>
      Experienced React Engineer
    </h6>
    <span
      className="ScreenReaderOnly"
      data-testid="SCREEN_READER_ONLY"
    >
      Opens in new window
    </span>
    <svg
      className="externalLinkIcon"
    />
  </a>
  <div
    className="details"
  >
    <div
      className="detailsContainer"
    >
      <svg
        className="icon"
      />
      <span
        className="detail"
      >
        Formidable Labs
      </span>
    </div>
    <div
      className="detailsContainer"
    >
      <svg
        className="icon"
      />
      <span
        className="detail"
      >
        Seattle
        ,
      </span>
      <span
        className="detail"
      >
        WA
        ,
      </span>
      <span
        className="detail"
      >
        United States
      </span>
    </div>
    <div
      className="detailsContainer"
    >
      <svg
        className="icon"
      />
      <span
        className="remote"
      >
        Remote
      </span>
    </div>
  </div>
  <p
    className="description"
  >
    As an Experienced React Engineer, you will do React things.
  </p>
</article>
`;

exports[`FeaturedJobItem should render with required props 1`] = `
<article
  className="job"
>
  <a
    href="https://about.gitlab.com/jobs/apply/?gh_jid=4055708002"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    <h6>
      DevOps Engineer
    </h6>
    <span
      className="ScreenReaderOnly"
      data-testid="SCREEN_READER_ONLY"
    >
      Opens in new window
    </span>
    <svg
      className="externalLinkIcon"
    />
  </a>
  <div
    className="details"
  >
    <div
      className="detailsContainer"
    >
      <svg
        className="icon"
      />
      <span
        className="detail"
      >
        GitLab
      </span>
    </div>
    <div
      className="detailsContainer"
    >
      
      
      
      
    </div>
  </div>
  <p
    className="description"
  >
    This is a fake role, since GitLab always has remote.
  </p>
</article>
`;
